Fix a contrast issue

--- a/www/styles.css
+++ b/www/styles.css
@@ -8,7 +8,7 @@
   --logo-gradient-start: #aaaaaa;
   --logo-gradient-mid: #777777;
   --logo-gradient-end: #333333;
-  --faded-color: #777777;
+  --faded-color: #444444;
   --main-width: 720px;
   --monospace-font;
   --font-sans: -apple-system, BlinkMacSystemFont, Roboto, Helvetica, Arial, sans-serif;
